--- a/type2.html
+++ b/type2.html
@@ -23,31 +23,11 @@
                     </td>
 
                     <td>
-                        <input type="radio" name="q1" value="disagree"> Disagree
+                        <input type="radio" name="q1" value="disagree"> Neutral
                     </td>
 
                     <td>
-                        <input type="radio" name="q1" value="neutral"> Neutral
-                    </td>
-                </tr>
-            </table>
-        </fieldset>
-
-        <fieldset>
-            Do you enjoy identifying and solving complex problems through systematic analysis and experimentation?.
-
-            <table align="center">
-                <tr>
-                    <td>
-                        <input type="radio" name="q1" value="agree"> Agree
-                    </td>
-
-                    <td>
-                        <input type="radio" name="q1" value="disagree"> Disagree
-                    </td>
-
-                    <td>
-                        <input type="radio" name="q1" value="neutral"> Neutral
+                        <input type="radio" name="q1" value="neutral"> Disagree
                     </td>
                 </tr>
             </table>
@@ -63,11 +43,10 @@
                     </td>
 
                     <td>
-                        <input type="radio" name="q1" value="disagree"> Disagree
-                    </td>
+                        <input type="radio" name="q1" value="disagree"> Neutral
 
                     <td>
-                        <input type="radio" name="q1" value="neutral"> Neutral
+                        <input type="radio" name="q1" value="neutral"> Disagree
                     </td>
                 </tr>
             </table>
@@ -83,11 +62,31 @@
                     </td>
 
                     <td>
-                        <input type="radio" name="q1" value="disagree"> Disagree
+                        <input type="radio" name="q1" value="disagree"> Neutral
                     </td>
 
                     <td>
-                        <input type="radio" name="q1" value="neutral" > Neutral
+                        <input type="radio" name="q1" value="neutral"> Disagree
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+
+        <fieldset>
+            Do you enjoy identifying and solving complex problems through systematic analysis and experimentation?.
+
+            <table align="center">
+                <tr>
+                    <td>
+                        <input type="radio" name="q1" value="agree"> Agree
+                    </td>
+
+                    <td>
+                        <input type="radio" name="q1" value="disagree"> Neutral
+                    </td>
+
+                    <td>
+                        <input type="radio" name="q1" value="neutral" > Disagree
                     </td>
                 </tr>
             </table>
